<resources>
    <string name="voicechat_empty"></string>
    <string name="ktv_entry_title">在线K歌房</string>
    <string name="ktv_create_room">创建K歌房</string>
    <string name="voicechat_dialog_first_enter_tips">系统已自动分配头像和昵称</string>
    <string name="ktv_dialog_known">我知道了</string>
    <string name="voicechat_enter">进入</string>
    <string name="voicechat_loading">加载中…</string>
    <string name="voicechat_load_end">-加载完毕-</string>
    <string name="voicechat_load_failed">-加载失败-</string>
    <string name="voicechat_load_complete">戳我，还有更多惊喜内容👇</string>
    <string name="ktv_list_room_empty">还没有K歌房，快去创建吧</string>
    <string name="voicechat_chat_room_prefix">房间号: </string>
    <string name="voicechat_chat_compere_flag">主持</string>
    <string name="voicechat_chat_self_flag">自己</string>
    <string name="voicechat_chat_msg_input_hint">说些什么吧~</string>
    <string name="voicechat_chat_member_empty_suffix">号麦</string>
    <string name="voicechat_chat_network_status_strong">网络正常</string>
    <string name="voicechat_chat_network_status_weak">网络卡顿</string>
    <string name="voicechat_chat_network_status_disconnected">网络中断</string>
    <string name="voicechat_chat_member_list_title">成员列表</string>
    <string name="voicechat_chat_member_list_compere_flag">主持人</string>
    <string name="voicechat_chat_member_list_chat_flag">麦上</string>
    <string name="voicechat_chat_member_list_audience_flag">观众</string>
    <string name="voicechat_chat_room_id_copied">房间号已复制</string>
    <string name="voicechat_chat_volume_off">扬声器已关闭</string>
    <string name="voicechat_chat_volume_on">扬声器已开启</string>
    <string name="voicechat_chat_microphone_off">麦克风已关闭</string>
    <string name="voicechat_chat_microphone_on">麦克风已开启</string>
    <string name="voicechat_chat_connect">上麦</string>
    <string name="voicechat_chat_disconnect">下麦</string>
    <string name="voicechat_chat_disconnect_tips">你已下麦</string>
    <string name="voicechat_cancel">取消</string>
    <string name="voicechat_retry">重试</string>
    <string name="voicechat_failed_to_connect_network">加载数据出错，请检查网络配置.</string>
    <string name="voicechat_exit_room">退出房间</string>
    <string name="voicechat_exit_room_tip_for_compere">离开后会解散房间，确认离开吗?</string>
    <string name="voicechat_exit_room_tip_for_other">离开房间后可以再次进入房间</string>
    <string name="voicechat_exit_room_confirm">确认离开</string>
    <string name="voicechat_exit_room_cancel">暂不离开</string>
    <string name="voicechat_send">发送</string>
    <string name="voicechat_warning_not_empty">输入不能为空!</string>
    <string name="voicechat_music">背景音乐</string>
    <string name="voicechat_human_volume">人声音量</string>
    <string name="voicechat_music_volume">音乐音量</string>
    <string name="voicechat_sound_effect">音效</string>
    <string name="voicechat_setting">调音台</string>
    <string name="voicechat_earback">耳返</string>
    <string name="voicechat_reverb">混响</string>
    <string name="voicechat_change_voice">变声</string>
    <string name="voicechat_laughter">笑声</string>
    <string name="voicechat_applause">掌声</string>
    <string name="voicechat_audition">试听</string>
    <string name="voicechat_use">使用</string>
    <string name="voicechat_stop">停止</string>
    <string name="voicechat_none">无</string>
    <string name="voicechat_reverb_rensheng">人生I</string>
    <string name="voicechat_reverb_rensheng2">人生II</string>
    <string name="voicechat_reverb_zaotang">澡堂</string>
    <string name="voicechat_reverb_minglaing">明亮小房间</string>
    <string name="voicechat_reverb_heian">黑暗小房间</string>
    <string name="voicechat_reverb_dafangjian">大房间</string>
    <string name="voicechat_reverb_zhongdeng">zhongdeng</string>
    <string name="voicechat_reverb_zoulang">走廊</string>

    <string name="voicechat_voice_luoli">萝莉</string>
    <string name="voicechat_voice_dashu">大叔</string>
    <string name="voicechat_voice_huisheng">回声</string>
    <string name="voicechat_voice_ktv">KTV</string>
    <string name="voicechat_voice_xiaohuangren">小黄人</string>
    <string name="voicechat_voice_jiqiren">机器人</string>
    <string name="voicechat_voice_damowang">大魔王</string>
    <string name="voicechat_voice_fangyan">方言</string>

    <string name="voicechat_switch_on">开启</string>
    <string name="voicechat_switch_off">关闭</string>

    <string name="voicechat_join_room_failed">加入房间失败</string>
    <string name="voicechat_room_closed">房间已关闭</string>
    <string name="voicechat_create_room_failed">创建房间失败</string>
    <string name="voicechat_send_message_failed">发送消息失败</string>
    <string name="voicechat_network_failed">网络连接失败</string>
    <string name="voicechat_login_failed">登录失败</string>
    <string name="voicechat_invalid_param">数据异常</string>
    <string name="voicechat_join_mic_full">麦上人员已满，请稍后尝试</string>
    <string name="voicechat_join_mic_failure">上麦失败</string>
    <string name="voicechat_join_mic_suffix">%1$s 上 %2$d 号麦</string>
    <string name="voicechat_leave_mic_suffix">%1$s 下 %2$d 号麦</string>
    <string name="voicechat_join_room_suffix">%1$s 进入了房间</string>
    <string name="voicechat_reconnect_for_compere">聊天中断，您可点击重试按钮开始重试</string>
    <string name="voicechat_reconnect_for_other">聊天中断，您可点击重试按钮再次连接或退出房间重新进入</string>
    <string name="voicechat_room_dismiss">房间已解散</string>
    <string name="voicechat_network_requesting">正在处理中，请稍后…</string>
    <string name="ktv_msg_tips">首次进入房间的评论展示文案：欢迎来到语聊房，房间禁止谈论政治、低俗色情、吸烟酗酒或发布虚假信息等内容，若有违反将踢出、封停账号。</string>
    <string name="ktv_msg_microphone_tips">温馨提示：连麦时佩戴耳机将提高连麦质量</string>

    <string name="ktv_enter_song_selector">点歌</string>
    <string name="ktv_song_selected">已点</string>
    <string name="ktv_song_selected_with_number">已点(%1$s)</string>
    <string name="ktv_song_search_hint">搜索歌曲名称或歌手名</string>
    <string name="ktv_cancel">取消</string>
    <string name="ktv_pause">暂停</string>
    <string name="ktv_play">播放</string>
    <string name="ktv_skip">切歌</string>
    <string name="ktv_join">一起唱</string>
    <string name="ktv_leave">退出</string>
    <string name="ktv_accompaniment">伴奏</string>
    <string name="ktv_original_singing">原唱</string>

    <string name="ktv_ok">好的</string>

    <string name="ktv_create_room_anchor_tips">%1$s 创建房间</string>
    <string name="ktv_join_mic_anchor_tips">%1$s 上1号麦位</string>
    <string name="ktv_notice_msg_add_music">%1$s 点歌 《%2$s》</string>
    <string name="ktv_notice_msg_remove_music">%1$s 删歌 《%2$s》</string>
    <string name="ktv_notice_msg_pin_music">%1$s 置顶 《%2$s》</string>
    <string name="ktv_notice_msg_skip_music">%1$s 切歌 《%2$s》</string>
    <string name="ktv_notice_msg_complete_music">%1$s 演唱《%2$s》结束</string>
    <string name="ktv_notice_msg_join_sing">%1$s 加入合唱《%2$s》</string>
    <string name="ktv_notice_msg_leave_join_sing">%1$s 退出合唱《%2$s》</string>

    <string name="ktv_singer_flag_lead">主唱</string>
    <string name="ktv_singer_flag_join">伴唱</string>
    <string name="ktv_toast_lead_sing">到你的歌啦</string>
    <string name="ktv_screen_tips_for_audiences">上麦后，可点歌</string>

    <string name="ktv_toast_music_downloading">歌曲下载中，请稍等</string>
    <string name="ktv_toast_network_weak">房间网络卡顿，会影响演唱效果</string>
</resources>