<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.aliyun.auikits.karaoke.room.vm.KtvRoomScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <LinearLayout
                android:id="@+id/ll_screen_status_bar"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:visibility="@{viewModel.screenStatusBarVisibility}">

                <LinearLayout
                    android:id="@+id/ll_screen_status_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView android:id="@+id/tv_song_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/voicechat_text_style_10"
                        android:text="@{viewModel.statusBarSongNameDesc}"
                        />
                    <TextView android:id="@+id/tv_song_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/voicechat_text_style_9_light_white"
                        android:text="@{viewModel.statusBarSongDurationDesc}"
                        />
                </LinearLayout>
                <TextView android:id="@+id/tv_sing_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/voicechat_text_style_10"
                    android:text="@{viewModel.statusBarSumScoreDesc}"
                    android:visibility="@{viewModel.screenStatusBarScoreVisibility}"
                    />
                <LinearLayout
                    android:id="@+id/btn_right_choose_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:background="@drawable/ktv_btn_screen_corner_song_panel_entrance_selector"
                    android:layout_marginLeft="8dp"
                    android:onClick="@{viewModel::onChooseSongClick}"
                    android:gravity="center"
                    android:visibility="@{viewModel.rightSongSelectorEntranceVisibility}"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ktv_song_panel_entrance_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        style="@style/voicechat_text_style_10"
                        android:text="@string/ktv_enter_song_selector"/>
                </LinearLayout>
            </LinearLayout>

            <com.aliyun.auikits.karaoke.room.widget.pitch.PitchView
                android:id="@+id/container_pitch_view"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:visibility="@{viewModel.screenPitchVisibility}"
                />


            <LinearLayout
                android:id="@+id/ll_song_notice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:visibility="@{viewModel.screenSongNoticeVisibility}">
                <TextView
                    android:id="@+id/tv_notice_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    style="@style/voicechat_text_style_12"
                    android:text="@{viewModel.noticeSongNameDesc}"
                    />
                <TextView
                    android:id="@+id/tv_notice_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    style="@style/voicechat_text_style_10_light_white"
                    android:text="@{viewModel.noticeProgressDesc}"
                    />
            </LinearLayout>
            <com.aliyun.auikits.karaoke.room.widget.lyric.LyricView
                android:id="@+id/container_lyric_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:visibility="@{viewModel.screenLyricVisibility}"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_screen_action_bar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center_vertical"
                android:visibility="@{viewModel.screenActionBarVisibility}"
                >
                <LinearLayout
                    android:id="@+id/btn_play_or_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ktv_btn_screen_action_selector"
                    android:onClick="@{viewModel::onButtonPlayClick}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"
                    android:visibility="@{viewModel.actionButtonPlayVisibility}"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@{viewModel.isSongPlaying ? @drawable/ktv_btn_pause: @drawable/ktv_btn_play}"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        style="@style/voicechat_text_style_10"
                        android:text="@{viewModel.isSongPlaying ? @string/ktv_pause: @string/ktv_play}" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ktv_btn_screen_action_selector"
                    android:onClick="@{viewModel::onButtonSkipClick}"
                    app:layout_constraintLeft_toRightOf="@id/btn_play_or_pause"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginLeft="0dp"
                    android:gravity="center"
                    android:visibility="@{viewModel.actionButtonSkipVisibility}"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ktv_card_skip"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        style="@style/voicechat_text_style_10"
                        android:text="@string/ktv_skip"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_switch_accompaniment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:background="@drawable/ktv_btn_screen_action_selector"
                    app:layout_constraintRight_toLeftOf="@id/btn_join"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginRight="0dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:visibility="@{viewModel.actionButtonAccompanimentVisibility}">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingRight="8dp"
                        android:textSize="10sp"
                        android:textColor="@{viewModel.isSongUseAccompaniment ? @color/voicechat_white_default : @color/voicechat_light_white}"
                        android:text="@string/ktv_accompaniment"
                        android:background="@{viewModel.isSongUseAccompaniment ? @drawable/ktv_btn_screen_action_button_selected_selector : @drawable/ktv_btn_screen_action_button_unselected_selector}"
                        android:onClick="@{viewModel::onButtonAccompanimentClick}"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingRight="8dp"
                        android:textSize="10sp"
                        android:textColor="@{!viewModel.isSongUseAccompaniment ? @color/voicechat_white_default : @color/voicechat_light_white}"
                        android:text="@string/ktv_original_singing"
                        android:background="@{!viewModel.isSongUseAccompaniment ? @drawable/ktv_btn_screen_action_button_selected_selector : @drawable/ktv_btn_screen_action_button_unselected_selector}"
                        android:onClick="@{viewModel::onButtonOriginalSingClick}"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ktv_btn_screen_action_selector"
                    android:onClick="@{viewModel::onButtonJoinClick}"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"
                    android:visibility="@{viewModel.actionButtonJoinVisibility}"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ktv_btn_join"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        style="@style/voicechat_text_style_10"
                        android:text="@{viewModel.btnJoinText}"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/btn_center_choose_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"
                android:background="@drawable/ktv_btn_screen_center_song_panel_entrance_selector"
                android:onClick="@{viewModel::onChooseSongClick}"
                android:gravity="center"
                android:visibility="@{viewModel.centerSongSelectorEntranceVisibility}">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ktv_song_panel_entrance_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    style="@style/voicechat_text_style_14"
                    android:text="@string/ktv_enter_song_selector"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_center_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"

                android:text="@string/ktv_screen_tips_for_audiences"
                android:visibility="@{viewModel.centerTipsVisibility}"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>